set new urls for portfolio projects

--- a/src/template.html
+++ b/src/template.html
@@ -114,10 +114,10 @@
                    This project is fully responsive. 
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://frankoadeleye.github.io/reactjs-ecommerce-app">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://reactjs-e-store-app.netlify.com">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/frankoadeleye/reactjs-ecommerce-app">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/frankoadeleye/reactjs-e-store-app">
                   Source Code
                 </a>
               </div>
