--- a/src/template.html
+++ b/src/template.html
@@ -1,14 +1,3 @@
-<!--
-  Hello!
-  -
-  Simplefolio is a clean and responsive portfolio template for Developers!
-  Created by Jacobo Martinez.
-  -
-  Github Repo: https://github.com/cobidev/simplefolio/
-  Readme: https://github.com/cobidev/simplefolio/README.md
-  -
-  For business & inquires, contact me -> cobimr@protonmail.com
--->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -17,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/png" href="./assets/favicon.png" />
 
-    <!-- Put here your site title -->
+    <!-- site title -->
     <title>Frank Adeleye | Software Developer</title>
-    <!-- Add some coding keywords below, Ex: (javascript, yourusername, etc) -->
+    <!--some coding keywords below, Ex: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[frankoadeleye], [Frank], javascript" />
-    <!-- Improve your SEO by adding a small descrption of you -->
+    <!-- Improve SEO by adding a small descrption -->
     <meta name="experienced web developer with javascript and react" content="[Frank O. Adeleye] | Software Developer" />
 
-    <!-- Required librarys -->
+    <!-- Required libraries -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -33,12 +22,7 @@
     <script>
       ScrollReveal({ reset: false });
     </script>
-
-    <!-- Remove this script once you setup your custom portfolio -->
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
-
-  <!-- Follow the HTML instructions to create your stunning portfolio website -->
   <body>
     <div id="top"></div>
 
@@ -46,7 +30,7 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hi, my name is <span class="text-color-main">Frank O. Adeleye</span>
+          Hi, I am <span class="text-color-main">Frank O. Adeleye,</span>
           <br />
           I'm a Software Developer.
         </h1>
@@ -70,7 +54,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="./assets/portfolio-pic1.jpg"
+                src="./assets/my-real-pic.jpg"
                 alt="Profile Image"
               />
             </div>
@@ -78,10 +62,10 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-               I am a goal-oriented, self-motivated JavaScript full-stack developer with years of experience in hands-on live projects and open-source contributions
+               I am a goal-oriented, self-motivated JavaScript full-stack developer with 2+ years of experience in hands-on live projects and open-source contributions
               </p>
               <p class="about-wrapper__info-text">
-                I am  also experienced in JavaScript frameworks such as ReactJS and Express, with actual live projects to show. I am the developer you need. Hire me!
+                I am  also experienced in JavaScript frameworks such as ReactJS and Express, with actual live projects to show. I am the developer you need.
               </p>
               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="#!">
@@ -110,7 +94,7 @@
                 <h3 class="project-wrapper__text-title">Phone Store</h3>
                 <div>
                   <p class="mb-4">
-                   This is a phone e-commerce store built with ReactJS, a JavaScript front-end framework. It has homepage, signup page and signin page. When you click on any product on the home page, you can decide to either add the item to cart and proceed or you can return to your product list without adding the item to the Cart.<br>
+                   This is an e-commerce store built with ReactJS, a JavaScript front-end framework. It has homepage, signup page, sigin page and a Cart. Code is written in the latest standard ES6 (ES2015).<br>
                    This project is fully responsive. 
                   </p>
                 </div>
@@ -126,7 +110,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/main-logo.png" />
+                    <img class="img-fluid" src="./assets/project.jpg" />
                   </div>
                 </a>
               </div>
@@ -234,16 +218,13 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a href="#!" target="_blank">
-            <i class="fa fa-twitter fa-inverse"></i>
-          </a>
-          <a href="#!" target="_blank">
+          <!-- <a href="#!" target="_blank">
             <i class="fa fa-codepen fa-inverse"></i>
-          </a>
-          <a href="#!" target="_blank">
+          </a> -->
+          <a href="https://linkedin.com/frank-o-adeleye" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a href="#!" target="_blank">
+          <a href="https://github.com/frankoadeleye" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -252,30 +233,7 @@
 
         <!-- If you give me some credit, will be huge for me :) -->
         <p class="footer__text">
-          © 2020 - Template developed by <a href="https://github.com/covidev" target="_blank">Jacobo Martínez</a>
-          </a>
-        </p>
-
-        <!-- Remove this paragraph once you setup your custom portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a
-          >
+          © 2020 - Frank Adeleye 
         </p>
       </div>
     </footer>
