changed height in scss

--- a/src/template.html
+++ b/src/template.html
@@ -29,7 +29,7 @@
     <!-- **** Hero Section **** -->
     <div id="hero" class="jumbotron">
       <div class="container">
-        <h1 class="hero-title" class="load-hidden">
+        <h1 class="hero-title load-hidden">
           Hi, I am <span class="text-color-main">Frank O. Adeleye,</span>
           <br />
           I'm a Software Developer.
