--- a/src/template.html
+++ b/src/template.html
@@ -27,7 +27,7 @@
     <div id="top"></div>
 
     <!-- **** Hero Section **** -->
-    <div id="hero" class="jumbotron">
+    <div id="hero" class="jumbotron" style='background: linear-gradient(to bottom, rgba(0,0,0,.8), rgba(0,0,0,.4)), url("/src/assets/new-lappy-img.png") center no-repeat;'>
       <div class="container">
         <h1 class="hero-title load-hidden">
           Hi, I am <span class="text-color-main">Frank O. Adeleye,</span>
