--- a/src/template.html
+++ b/src/template.html
@@ -62,7 +62,7 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-               I am a goal-oriented, self-motivated JavaScript full-stack developer with 2+ years of experience in hands-on live projects and open-source contributions
+               I am a goal-oriented, self-motivated full-stack Javascript developer with 2+ years of experience in hands-on live projects and open-source contributions
               </p>
               <p class="about-wrapper__info-text">
                 I am  also experienced in JavaScript frameworks such as ReactJS and Express, with actual live projects to show. I am the developer you need.
