added call to action line

--- a/src/template.html
+++ b/src/template.html
@@ -119,23 +119,19 @@
           <!-- /END Project -->
 
           <!-- Each .row is a project -->
-          <!-- <div class="row">
+          <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Project Title</h3>
+                <h3 class="project-wrapper__text-title">Robots Invoker</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                   Another App with React. Robots are invoked from an API and a search engine helps us narrow our search results from the API to get particular robots
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="#!">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://robots-invoker.netlify.com/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="#!">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/frankoadeleye/Robofriends">
                   Source Code
                 </a>
               </div>
@@ -149,7 +145,7 @@
                 </a>
               </div>
             </div>
-          </div> -->
+          </div>
           <!-- /END Project -->
 
           <!-- Each .row is a project -->
@@ -198,7 +194,7 @@
         </h2>
         <div class="contact-wrapper">
           <p class="contact-wrapper__text">
-            [Put your call to action here]
+            I am the developer you need, and I am available for hire, contact today.
           </p>
           <a
             target="_blank"
