--- a/src/template.html
+++ b/src/template.html
@@ -68,7 +68,7 @@
                 I am  also experienced in JavaScript frameworks such as ReactJS and Express, with actual live projects to show. I am the developer you need.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="./assets/OluwatimilehinResume.pdf">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="./assets/Oluwatimilehin.pdf">
                   View Resume
                 </a>
               </span>
