project img resized

--- a/src/template.html
+++ b/src/template.html
@@ -110,7 +110,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid project-img" src="./assets/ScreenshotPhone.png" />
                   </div>
                 </a>
               </div>
@@ -140,7 +140,7 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid" src="./assets/project.jpg" />
+                    <img class="img-fluid project-img" src="./assets/ScreenshotRobots.png" />
                   </div>
                 </a>
               </div>
