updated my port-folio CV

--- a/src/template.html
+++ b/src/template.html
@@ -32,7 +32,7 @@
         <h1 class="hero-title load-hidden">
           Hi, I am <span class="text-color-main">Frank O. Adeleye,</span>
           <br />
-          I'm a Software Developer.
+          I'm a Front-end Developer.
         </h1>
         <p class="hero-cta" class="load-hidden">
           <a class="cta-btn cta-btn--hero" href="#about">Know more</a>
@@ -62,13 +62,14 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-               I am a goal-oriented, self-motivated full-stack Javascript developer with 2+ years of experience in hands-on live projects and open-source contributions
+               Versatile Front-end Developer with 2+ years of experience designing, developing, and managing complex e-commerce sites and internal frameworks. Specializes in ReactJS and responsive design.
+               
               </p>
               <p class="about-wrapper__info-text">
-                I am  also experienced in JavaScript frameworks such as ReactJS and Express, with actual live projects to show. I am the developer you need.
+                I am  also experienced in CSS frameworks such as Bootstrap 4, styling frameworks for react apps such as Styled-components and Material UI. I am the developer you need.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="./assets/Oluwatimilehin.pdf">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="./assets/FranksResume2020.pdf">  <!--remember to point to this resume in your index.js  -->
                   View Resume
                 </a>
               </span>
@@ -217,7 +218,7 @@
           <!-- <a href="#!" target="_blank">
             <i class="fa fa-codepen fa-inverse"></i>
           </a> -->
-          <a href="https://linkedin.com/frank-o-adeleye" target="_blank">
+          <a href="https://www.linkedin.com/in/frank-o-adeleye-15a536171/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
           <a href="https://github.com/frankoadeleye" target="_blank">
