--- a/src/template.html
+++ b/src/template.html
@@ -11,7 +11,10 @@
     <!--some coding keywords below, Ex: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[frankoadeleye], [Frank], javascript" />
     <!-- Improve SEO by adding a small descrption -->
-    <meta name="experienced web developer with javascript and react" content="[Frank O. Adeleye] | Software Developer" />
+    <meta
+      name="experienced web developer with javascript and react"
+      content="[Frank O. Adeleye] | Software Developer"
+    />
 
     <!-- Required libraries -->
     <link
@@ -62,14 +65,23 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-               Versatile Front-end Developer with 2+ years of experience designing, developing, and managing complex e-commerce sites and internal frameworks. Specializes in ReactJS and responsive design.
-               
+                Versatile Front-end Developer with 2+ years of experience
+                designing, developing, and managing complex e-commerce sites and
+                internal frameworks. Specializes in ReactJS and responsive
+                design.
               </p>
               <p class="about-wrapper__info-text">
-                I am  also experienced in CSS frameworks such as Bootstrap 4, styling frameworks for react apps such as Styled-components and Material UI. I am the developer you need.
+                I am also experienced in CSS frameworks such as Bootstrap 4,
+                styling frameworks for react apps such as Styled-components and
+                Material UI. I am the developer you need.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="./assets/FranksResume2020.pdf">  <!--remember to point to this resume in your index.js  -->
+                <a
+                  target="_blank"
+                  class="cta-btn cta-btn--resume"
+                  href="./assets/Frankoliz.pdf"
+                >
+                  <!--remember to point to this resume in your index.js  -->
                   View Resume
                 </a>
               </span>
@@ -95,14 +107,25 @@
                 <h3 class="project-wrapper__text-title">Phone Store</h3>
                 <div>
                   <p class="mb-4">
-                   This is an e-commerce store built with ReactJS, a JavaScript front-end framework. It has homepage, signup page, sigin page and a Cart. Code is written in the latest standard ES6 (ES2015).<br>
-                   This project is fully responsive. 
+                    This is an e-commerce store built with ReactJS, a JavaScript
+                    front-end framework. It has homepage, signup page, sigin
+                    page and a Cart. Code is written in the latest standard ES6
+                    (ES2015).<br />
+                    This project is fully responsive.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://reactjs-e-store-app.netlify.com">
+                <a
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://reactjs-e-store-app.netlify.com"
+                >
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/frankoadeleye/reactjs-e-store-app">
+                <a
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/frankoadeleye/reactjs-e-store-app"
+                >
                   Source Code
                 </a>
               </div>
@@ -111,7 +134,10 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid project-img" src="./assets/ScreenshotPhone.png" />
+                    <img
+                      class="img-fluid project-img"
+                      src="./assets/ScreenshotPhone.png"
+                    />
                   </div>
                 </a>
               </div>
@@ -126,13 +152,23 @@
                 <h3 class="project-wrapper__text-title">Robots Invoker</h3>
                 <div>
                   <p class="mb-4">
-                   Another App with React. Robots are invoked from an API and a search engine helps us narrow our search results from the API to get particular robots
+                    Another App with React. Robots are invoked from an API and a
+                    search engine helps us narrow our search results from the
+                    API to get particular robots
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://robots-invoker.netlify.com/">
+                <a
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://robots-invoker.netlify.com/"
+                >
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/frankoadeleye/Robofriends">
+                <a
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/frankoadeleye/Robofriends"
+                >
                   Source Code
                 </a>
               </div>
@@ -141,7 +177,10 @@
               <div class="project-wrapper__image">
                 <a href="#!" target="_blank">
                   <div data-tilt class="thumbnail rounded">
-                    <img class="img-fluid project-img" src="./assets/ScreenshotRobots.png" />
+                    <img
+                      class="img-fluid project-img"
+                      src="./assets/ScreenshotRobots.png"
+                    />
                   </div>
                 </a>
               </div>
@@ -195,7 +234,8 @@
         </h2>
         <div class="contact-wrapper">
           <p class="contact-wrapper__text">
-            I am the developer you need, and I am available for hire, contact today.
+            I am the developer you need, and I am available for hire, contact
+            today.
           </p>
           <a
             target="_blank"
@@ -218,7 +258,10 @@
           <!-- <a href="#!" target="_blank">
             <i class="fa fa-codepen fa-inverse"></i>
           </a> -->
-          <a href="https://www.linkedin.com/in/frank-o-adeleye-15a536171/" target="_blank">
+          <a
+            href="https://www.linkedin.com/in/frank-o-adeleye-15a536171/"
+            target="_blank"
+          >
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
           <a href="https://github.com/frankoadeleye" target="_blank">
@@ -230,7 +273,7 @@
 
         <!-- If you give me some credit, will be huge for me :) -->
         <p class="footer__text">
-          © 2020 - Frank Adeleye 
+          © 2020 - Frank Adeleye
         </p>
       </div>
     </footer>
